--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "consolidate": "^0.14.1",
     "express": "^4.13.4",
     "lodash": "^4.13.1"
   },
