--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "consolidate": "^0.14.1",
     "express": "^4.13.4",
+    "handlebars": "^4.0.5",
     "lodash": "^4.13.1"
   },
   "devDependencies": {
